<resources>
    <string name="app_name">Matehub</string>
    <string name="splash_welcome_txt">Welcome...</string>
    <string name="slide_skip_btn_txt">Skip</string>
    <string name="slide_finish_btn_txt">Finish</string>
    <string name="login_username_hint">Username...</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_txt">Login To Account</string>
    <string name="login_logo_desc">Logo of FCI</string>
    <string name="login_forget_btn_txt">Forget password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forget_password_dialog_txt">Please enter your E-mail address...</string>
    <string name="forget_password_dialog_textview_hint_txt">Email Address...</string>
    <string name="forget_password_dialog_sendbtn_txt">Send</string>
    <string name="Courses_textview_txt">Courses</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name_txt">Course Name</string>
    <string name="course_details_tutorials_btn_txt">Tutorials</string>
    <string name="course_details_quizes_btn_txt">Quizes</string>
    <string name="title_activity_course_tutorials_student">CourseTutorialsStudentActivity</string>
    <string name="course_tutorials_stud_tutorialName">Tutorial Name</string>
    <string name="course_tutorials_stud_quizName">Quiz Name</string>
    <string name="course_add_tutorial_selectbtn_txt">Select File</string>
    <string name="course_add_tutorial_addbtn_txt">Add</string>
    <string name="course_add_quiz_teamRadio_txt">Team</string>
    <string name="course_add_quiz_indivRadio_txt">Individual</string>
    <string name="course_add_quiz_deadline_txt">Deadline :</string>
    <string name="course_add_quiz_deadlinee_txt">Deadline</string>
    <string name="course_add_quiz_name_txt">Quiz</string>
    <string name="course_quiz_det_stud_downloadBtn_txt">Download Quiz</string>
    <string name="course_quiz_det_quizType_txt">Quiz type :</string>
    <string name="course_quiz_det_stud_selectBtn_txt">Select Solution</string>
    <string name="notification_textview_txt">Notification Content</string>
    <string name="notification_userName_txt">Username</string>
    <string name="notification_nav_txt">Notifications</string>
    <string name="teams_nav_txt">Teams</string>
    <string name="home_nav_txt">Home</string>
    <string name="logout_nav_txt">Logout</string>
    <string name="profile_nav_txt">Profile</string>



    <!--Fragment_Home_Text-->
    <string name="fragment_home_profile_name">Profile name</string>
    <string name="fragment_home_post_time">Post time</string>
    <string name="fragment_home_post_content">Hello every one welcome to our app</string>
    <string name="fragment_home_profile_like">Like</string>
    <string name="fragment_home_profile_like_num">Like_num</string>
    <string name="fragment_home_profile_comment">Comment</string>
    <string name="fragment_home_profile_comment_num">comment_num</string>
    <string name="profile_fragment_email_hint_txt">Email ...</string>
    <string name="profile_fragment_pass_hint_txt">Password ...</string>
    <string name="profile_fragment_phone_hint_txt">Phone number ...</string>
    <string name="profile_fragment_birthdate_hint_txt">Birth date ...</string>
    <string name="profile_fragment_id_hint_txt">Identification number ...</string>
    <string name="profile_fragment_department_hint_txt">Department ...</string>
    <string name="profile_fragment_level_hint_txt">Level ...</string>
    <string name="profile_old_password">Old password ...</string>
    <string name="profile_new_password">New password ...</string>
    <string name="profile_confirm_pass_hint_txt">Confirm password ...</string>
    <string name="profile_save_btn_txt">Save</string>
    <string name="header_department_txt">Department</string>
    <string name="home_messanger_icon_txt">messanger</string>
    <string name="teams_teamname_hint_txt">Team name</string>
    <string name="teams_team_leader_name_txt">Team leader</string>
    <string name="teams_team_members_names_txt">Team members</string>

    <string name="error_user_name_validation">please enter valid user name</string>
    <string name="error_pass_validation">please enter valid password</string>

    <string name="error_old_pass_validation">password is wrong</string>
    <string name="error_confirm_pass_validation">password is not confirmed</string>
    <string name="error_email_validation">Email is empty</string>
    <string name="course_details_teams_btn_txt">Teams</string>
    <string name="heading">heading</string>
    <string name="text_awesome">text awesome</string>
    <string name="todo">Todo</string>

    <string name="notification1">Kareem create post now</string>

</resources>
