<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_nav_txt" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_nav_txt" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/Courses_textview_txt" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_notify"
            android:title="@string/notification_nav_txt" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_teams"
            android:title="@string/teams_nav_txt" />


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_nav_txt" />
        </menu>
    </item>

</menu>
