<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_layout">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_old_password"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/profile_new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/profile_confirm_pass_hint_txt"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/save_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_corner_redius"
        android:text="@string/profile_save_btn_txt"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
