<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/forget_password_dialog_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/forget_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/forget_password_dialog_textview_hint_txt"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/forget_password_send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_corner_redius"
        android:onClick="sendPassword"
        android:text="@string/forget_password_dialog_sendbtn_txt"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>
