<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="25dp"
    android:layout_margin="8dp"
    android:paddingBottom="8dp"
    android:background="@color/colorWhite"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/home_fragment_profile_picture"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_user_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


    <TextView
        android:id="@+id/home_fragment_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/fragment_home_profile_name"
        android:textColor="@color/colorDrawerBG"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/home_fragment_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_profile_picture" />

    <TextView
        android:id="@+id/home_fragment_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fragment_home_post_time"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_profile_name" />

    <TextView
        android:id="@+id/home_fragment_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/fragment_home_post_content"
        android:textColor="@color/colorDrawerBG"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_profile_picture" />


    <ImageView
        android:id="@+id/home_fragment_like_image"
        android:layout_width="19dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_post"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_post"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/home_fragment_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/fragment_home_profile_like_num"
        app:layout_constraintStart_toEndOf="@+id/home_fragment_like_image"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_like_image" />


    <TextView
        android:id="@+id/home_fragment_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_home_profile_comment_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_post" />

    <ImageView
        android:id="@+id/home_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_like_image"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_like_count"

        app:srcCompat="@color/colorPrimaryDark" />




    <LinearLayout
        android:id="@+id/fragment_home_like_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_line"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_line">

        <Button
            android:id="@+id/home_fragment_like_btn"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/home_fragment_delike_btn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_home_profile_like"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_home_comment_ly"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/home_fragment_comment_count"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_line">

        <Button
            android:id="@+id/home_fragment_comment_btn"
            android:layout_width="18dp"
            android:layout_marginTop="4dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_comment_btn" />

        <TextView
            android:id="@+id/home_fragment_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_profile_comment"
            android:textSize="13sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>